--- a/apps/AdminComposite/Content/admin-styles.css
+++ b/apps/AdminComposite/Content/admin-styles.css
@@ -160,3 +160,22 @@ table .actions .admin-delete
 	margin-bottom: 20px;
 	margin-left: 10px;
 }
+
+.no-table-data td
+{
+	text-align: center;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	font-weight: bold;
+	font-style: italic;
+	color: #AE432E;
+}
+
+.no-moderation-items {
+	text-align: center;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	font-weight: bold;
+	font-style: italic;
+	color: #AE432E;
+}
