--- a/apps/AdminComposite/Views/Badge/List.cshtml
+++ b/apps/AdminComposite/Views/Badge/List.cshtml
@@ -74,33 +74,51 @@
 				<th></th>
 			</tr>
 		</thead>
-		<tfoot>
-			<tr>
-				<td>
-					<ul class="button-switch">
-						<li><button type="button" id="save">Save</button></li>
-					</ul>
-				</td>
-				@Html.Partial("_pagination")
-			</tr>
-		</tfoot>
-		<tbody>
-			@foreach (var badge in Model.Badges)
-			{
+		@if (Model.TotalBadges == 0)
+		{
+			<tbody class="no-table-data">
 				<tr>
-					<td>@Html.CheckBoxFor(m => badge.Active, new { @class = "badge-active", data_item_id = @badge.Identifier })</td>
-					<td>@badge.Name</td>
-					<td>@badge.Field @badge.Operator @badge.Value</td>
-					<td>@if (!string.IsNullOrEmpty(badge.ImageUrl)) { <text><img src="@badge.ImageUrl" alt="badge image" class="badge-preview"/></text>}else {<text>&nbsp;</text>}</td>
+					<td colspan="5">There are no badges in this forum, create one using the blue button above.</td>
+				</tr>
+			</tbody>
+		}
+		else
+		{
+			<tfoot>
+				<tr>
 					<td>
-						<ul class="actions">
-							<li><a class="edit" rel="tooltip" href="#" data-item-id="@badge.Identifier" original-title="Edit">Edit</a></li>
+						<ul class="button-switch">
+							<li><button type="button" id="save">Save</button></li>
 						</ul>
 					</td>
+					@Html.Partial("_pagination")
 				</tr>
-			}
+			</tfoot>
+			<tbody>
+				@foreach (var badge in Model.Badges)
+				{
+					<tr>
+						<td>@Html.CheckBoxFor(m => badge.Active, new {@class = "badge-active", data_item_id = @badge.Identifier})</td>
+						<td>@badge.Name</td>
+						<td>@badge.Field @badge.Operator @badge.Value</td>
+						<td>@if (!string.IsNullOrEmpty(badge.ImageUrl))
+							{
+								<text><img src="@badge.ImageUrl" alt="badge image" class="badge-preview"/></text>
+							}
+							else
+							{
+								<text>&nbsp;</text>
+							}</td>
+						<td>
+							<ul class="actions">
+								<li><a class="edit" rel="tooltip" href="#" data-item-id="@badge.Identifier" original-title="Edit">Edit</a></li>
+							</ul>
+						</td>
+					</tr>
+				}
 
-		</tbody>
+			</tbody>
+		}
 	</table>
 </article>
 @section Breadcrumbs {
