--- a/apps/AdminComposite/Views/Content/List.cshtml
+++ b/apps/AdminComposite/Views/Content/List.cshtml
@@ -97,33 +97,44 @@
 				<th>&nbsp;</th>
 			</tr>
 		</thead>
-		<tfoot>
-			<tr>
-				<td>
-					<ul class="button-switch">
-						<li><button type="button" id="update">Save</button></li>
-					</ul>
-				</td>
-				@Html.Partial("_Pagination")
-			</tr>
-		</tfoot>
-		<tbody>
-			@foreach (var content in Model.ContentItems)
-			{
+		@if (Model.TotalContentItems == 0)
+		{
+			<tbody class="no-table-data">
 				<tr>
-					<td>@Html.CheckBoxFor(m=>content.Active, new {@class="content-active", data_item_id=@content.Identifier})</td>
-					<td>@content.ContentLocation</td>
-					<td>@content.ContentType</td>
+					<td colspan="4">There are no content items in this forum, create one using the blue button above.</td>
+				</tr>
+			</tbody>
+		}
+		else
+		{
+			<tfoot>
+				<tr>
 					<td>
-						<ul class="actions">
-							<li><a class="edit" rel="tooltip" href="#" original-title="Edit" data-item-id="@content.Identifier">Edit</a></li>
-							<li><a class="admin-delete confirmation-dialog" href="#" rel="tooltip" original-title="Delete" data-confirmation-message="Do you want to delete this content?" data-confirm-function="deleteContent" data-item-id="@content.Identifier">Delete</a></li>
-							<li><a class="preview" data-item-id="@content.Identifier" href="#" rel="tooltip" original-title="Preview">Delete</a></li>
+						<ul class="button-switch">
+							<li><button type="button" id="update">Save</button></li>
 						</ul>
 					</td>
+					@Html.Partial("_Pagination")
 				</tr>
-			}
-		</tbody>
+			</tfoot>
+			<tbody>
+				@foreach (var content in Model.ContentItems)
+				{
+					<tr>
+						<td>@Html.CheckBoxFor(m => content.Active, new {@class = "content-active", data_item_id = @content.Identifier})</td>
+						<td>@content.ContentLocation</td>
+						<td>@content.ContentType</td>
+						<td>
+							<ul class="actions">
+								<li><a class="edit" rel="tooltip" href="#" original-title="Edit" data-item-id="@content.Identifier">Edit</a></li>
+								<li><a class="admin-delete confirmation-dialog" href="#" rel="tooltip" original-title="Delete" data-confirmation-message="Do you want to delete this content?" data-confirm-function="deleteContent" data-item-id="@content.Identifier">Delete</a></li>
+								<li><a class="preview" data-item-id="@content.Identifier" href="#" rel="tooltip" original-title="Preview">Delete</a></li>
+							</ul>
+						</td>
+					</tr>
+				}
+			</tbody>
+		}
 	</table>
 </article>
 @section Breadcrumbs{
