add '.' to end of sentence

--- a/apps/AdminComposite/Views/Moderation/Items.cshtml
+++ b/apps/AdminComposite/Views/Moderation/Items.cshtml
@@ -144,7 +144,7 @@
 			@if (Model.TotalPosts == 0)
 			{
 				<p class="no-moderation-items">
-					There are no @ViewBag.ItemType to moderate at this time
+					There are no @ViewBag.ItemType to moderate at this time.
 				</p>
 			}
 			else
