provide feedback after pressing the 'save' button on the voting page, disable 'active' checkbox for the current organization user, set active = true when creating organization & forum users, only authenticate active organization users

--- a/apps/AdminComposite/Views/Organization/Users.cshtml
+++ b/apps/AdminComposite/Views/Organization/Users.cshtml
@@ -92,13 +92,11 @@
 			<tbody>
 				@foreach (var user in Model.Users)
 				{
+					var isCurrentUser = (HttpContext.Current.User.Identity.Name == user.Username);
 					<tr>
-						<td><input type="checkbox" @if (user.Active)
-												   {
-										   			<text>checked="checked"</text>
-												   } class="activate-user" data-user-id="@user.Identifier"/></td>
+						<td><input type="checkbox" @if (user.Active) { <text>checked="checked"</text> } @if (isCurrentUser) {<text>disabled="disabled"</text>} class="activate-user" data-user-id="@user.Identifier"/></td>
 						<td>
-							@if (HttpContext.Current.User.Identity.Name == user.Username)
+							@if (isCurrentUser)
 							{
 								<span>(You)</span>
 							} 
