a little css clean up

--- a/apps/AdminComposite/Content/admin-styles.css
+++ b/apps/AdminComposite/Content/admin-styles.css
@@ -161,17 +161,9 @@ table .actions .admin-delete
 	margin-left: 10px;
 }
 
+.no-moderation-items,
 .no-table-data td
 {
-	text-align: center;
-	padding-top: 50px;
-	padding-bottom: 50px;
-	font-weight: bold;
-	font-style: italic;
-	color: #AE432E;
-}
-
-.no-moderation-items {
 	text-align: center;
 	padding-top: 50px;
 	padding-bottom: 50px;
