removed home item from top bar; screens on top bar now set appropriate styles to indicate which is active, however this is just a placeholder for a more model-based approach

--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/TopBar.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/TopBar.cshtml
@@ -3,10 +3,9 @@
 		<div class="container-fluid">
 			<a class="brand" href="@Url.Action("Home")">{Forum Name}</a>
 			<ul class="nav">
-				<li class="active"><a href="@Url.Action("Home")">Home</a></li>
-				<li><a href="@Url.Action("Categories")">Categories</a></li>
-				<li><a href="@Url.Action("Tags")">Tags</a></li>
-				<li><a href="@Url.Action("Info")">Info</a></li>
+				<li class="@ViewBag.CategoriesClass"><a href="@Url.Action("Categories")">Categories</a></li>
+				<li class="@ViewBag.TagsClass"><a href="@Url.Action("Tags")">Tags</a></li>
+				<li class="@ViewBag.InfoClass"><a href="@Url.Action("Info")">Info</a></li>
 			</ul>
 			<form action="" class="pull-right">
 				<input class="input-small" type="text" placeholder="Username">
