--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/Info.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/Info.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
 	ViewBag.Title = "{Forum Name} Info";
 	Layout = "~/Views/RoughDraft/Shared/_ForumLayout.cshtml";
+	ViewBag.InfoClass = "active";
 }
 <h1>Forum Info</h1>
 <hr />
