--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/Tags.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/Tags.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
 	ViewBag.Title = "{Forum Name} - Tags";
 	Layout = "~/Views/RoughDraft/Shared/_ForumLayout.cshtml";
+	ViewBag.TagsClass = "active";
 }
 <ul class="breadcrumb">
 	<li><a href="@Url.Action("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
