starting to factor the template out into a better structure, including named routes

--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/All.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/All.cshtml
@@ -3,9 +3,9 @@
 	Layout = "~/Views/RoughDraft/Shared/_ForumLayout.cshtml";
 }
 <ul class="tabs">
-	<li><a href="@Url.Action("Home")">Popular Posts</a></li>
-	<li><a href="@Url.Action("ControversialPosts")">Controversial Posts</a></li>
-	<li class="active"><a href="@Url.Action("AllPosts")">All Posts</a></li>
+	<li><a href="@Url.RouteUrl("PopularPosts")">Popular Posts</a></li>
+	<li><a href="@Url.RouteUrl("ControversialPosts")">Controversial Posts</a></li>
+	<li class="active"><a href="@Url.RouteUrl("AllPosts")">All Posts</a></li>
 </ul>
 <!-- all posts -->
 
