--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Popular.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Popular.cshtml
@@ -9,7 +9,7 @@
 		<h2>Welcome, forum user.</h2>
 		This is something a user only needs to see occasionally and can be closed. Duis
 		mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem
-		nec elit.</p>
+		nec elit, etc.</p>
 
 	<div class="alert-actions">
 		<a class="btn large info" href="#">Go register!</a>
@@ -18,9 +18,9 @@
 </div>
 
 <ul class="tabs">
-	<li class="active"><a href="#">Popular Posts</a></li>
-	<li><a href="@Url.Action("ControversialPosts")">Controversial Posts</a></li>
-	<li><a href="@Url.Action("AllPosts")">All Posts</a></li>
+	<li class="active"><a href="@Url.RouteUrl("PopularPosts")">Popular Posts</a></li>
+	<li><a href="@Url.RouteUrl("ControversialPosts")">Controversial Posts</a></li>
+	<li><a href="@Url.RouteUrl("AllPosts")">All Posts</a></li>
 </ul>
 <!-- top posts -->
 
