--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/TopBar.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/TopBar.cshtml
@@ -1,11 +1,11 @@
 ﻿<div class="topbar">
 	<div class="topbar-inner">
 		<div class="container-fluid">
-			<a class="brand" href="@Url.Action("Home")">{Forum Name}</a>
+			<a class="brand" href="@Url.RouteUrl("Home")">{Forum Name}</a>
 			<ul class="nav">
-				<li class="@ViewBag.CategoriesClass"><a href="@Url.Action("Categories")">Categories</a></li>
-				<li class="@ViewBag.TagsClass"><a href="@Url.Action("Tags")">Tags</a></li>
-				<li class="@ViewBag.InfoClass"><a href="@Url.Action("Info")">Info</a></li>
+				<li class="@ViewBag.CategoriesClass"><a href="@Url.Action("Categories", "RoughDraft")">Categories</a></li>
+				<li class="@ViewBag.TagsClass"><a href="@Url.Action("Tags", "RoughDraft")">Tags</a></li>
+				<li class="@ViewBag.InfoClass"><a href="@Url.Action("Info", "RoughDraft")">Info</a></li>
 			</ul>
 			<form action="" class="pull-right">
 				<input class="input-small" type="text" placeholder="Username">
