working on nav, there is still probably some weirdness but it will disappear as things are ported over

--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/Category.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/Category.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
 	ViewBag.Title = "{Forum Name} - {Category Name}";
 	Layout = "~/Views/RoughDraft/Shared/_ForumLayout.cshtml";
+	ViewBag.CategoriesClass = "active";
 }
 <ul class="breadcrumb">
 	<li><a href="@Url.Action("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
