--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/Tag.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/Tag.cshtml
@@ -1,9 +1,10 @@
 ﻿@{
 	ViewBag.Title = "{Forum Name} - {Tag Name}";
 	Layout = "~/Views/RoughDraft/Shared/_ForumLayout.cshtml";
+	ViewBag.TagsClass = "active";
 }
 			<ul class="breadcrumb">
-				<li><a href="@Url.Action("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
+				<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
 				<li><a href="@Url.Action("Tags")">Tags</a> <span class="divider">/</span></li>
 				<li class="active">{Tag Name}</li>
 			</ul>
