--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/Tags.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/Tags.cshtml
@@ -4,7 +4,7 @@
 	ViewBag.TagsClass = "active";
 }
 <ul class="breadcrumb">
-	<li><a href="@Url.Action("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
 	<li class="active">Tags</li>
 </ul>
 <h1>Tags</h1>
