moved category views out of rough draft controller; removed obsolete rough draft views

--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Category/All.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Category/All.cshtml
@@ -14,7 +14,7 @@
 
 	<div class="span5">
 		<h2><a href="@Url.RouteUrl("Category", new { categorySlug = "category-name" })">{Category Name}</a></h2>
-		<p>A brief description of the category.</p>
+		<p>A brief description of the category, yo.</p>
 		<dl>
 			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
 			<dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br />
