--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/All.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/All.cshtml
@@ -13,7 +13,7 @@
 <div class="row">
 
 	<div class="span5">
-		<h2><a href="@Url.Action("Tag")">{Tag Name}</a></h2>
+		<h2><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h2>
 		<p>A brief description of the tag.</p>
 		<dl>
 			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
@@ -40,7 +40,7 @@
 	</div>
 
 	<div class="span5">
-		<h2><a href="@Url.Action("Tag")">{Tag Name}</a></h2>
+		<h2><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h2>
 		<p>A brief description of the tag.</p>
 		<dl>
 			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
@@ -67,7 +67,7 @@
 	</div>
 
 	<div class="span5">
-		<h2><a href="@Url.Action("Tag")">{Tag Name}</a></h2>
+		<h2><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h2>
 		<p>A brief description of the tag.</p>
 		<dl>
 			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
@@ -100,7 +100,7 @@
 <div class="row">
 
 	<div class="span4" style="font-size: smaller;">
-		<h3><a href="@Url.Action("Tag")">{Tag Name}</a></h3>
+		<h3><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h3>
 		<p>A brief description of the tag.</p>
 		<dl>
 			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
@@ -117,7 +117,7 @@
 	</div>
 
 	<div class="span4" style="font-size: smaller;">
-		<h3><a href="@Url.Action("Tag")">{Tag Name}</a></h3>
+		<h3><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h3>
 		<p style="font-size: smaller;">A brief description of the tag.</p>
 		<dl>
 			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
@@ -134,7 +134,7 @@
 	</div>
 
 	<div class="span4" style="font-size: smaller;">
-		<h3><a href="@Url.Action("Tag")">{Tag Name}</a></h3>
+		<h3><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h3>
 		<p style="font-size: smaller;">A brief description of the tag.</p>
 		<dl>
 			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
@@ -151,7 +151,7 @@
 	</div>
 
 	<div class="span4" style="font-size: smaller;">
-		<h3><a href="@Url.Action("Tag")">{Tag Name}</a></h3>
+		<h3><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h3>
 		<p style="font-size: smaller;">A brief description of the tag.</p>
 		<dl>
 			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
