--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/TopBar.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/TopBar.cshtml
@@ -4,7 +4,7 @@
 			<a class="brand" href="@Url.RouteUrl("Home")">{Forum Name}</a>
 			<ul class="nav">
 				<li class="@ViewBag.CategoriesClass"><a href="@Url.RouteUrl("Categories")">Categories</a></li>
-				<li class="@ViewBag.TagsClass"><a href="@Url.Action("Tags", "RoughDraft")">Tags</a></li>
+				<li class="@ViewBag.TagsClass"><a href="@Url.RouteUrl("Tags")">Tags</a></li>
 				<li class="@ViewBag.InfoClass"><a href="@Url.Action("Info", "RoughDraft")">Info</a></li>
 			</ul>
 			<form action="" class="pull-right">
