--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/Detail.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/Detail.cshtml
@@ -5,7 +5,7 @@
 }
 			<ul class="breadcrumb">
 				<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
-				<li><a href="@Url.Action("Tags")">Tags</a> <span class="divider">/</span></li>
+				<li><a href="@Url.RouteUrl("Tags")">Tags</a> <span class="divider">/</span></li>
 				<li class="active">{Tag Name}</li>
 			</ul>
 			<h1>{Tag Name}</h1>
