--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/TopUsers.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/TopUsers.cshtml
@@ -2,52 +2,52 @@
 
 <div class="row">
 	<div class="span1" style="margin-top: 4px;">
-		<a href="@Url.Action("User")"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30"/></a>
+		<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug"})"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30"/></a>
 	</div>
 	<div class="span2" style="margin-left: 0px;">
-		<a href="@Url.Action("User")">Username</a><br/>
+		<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug"})">Username</a><br/>
 		<small style="font-size: smaller;">35 points, 5 badges</small>
 	</div>
 </div>
 
 <div class="row">
 	<div class="span1" style="margin-top: 4px;">
-		<a href="@Url.Action("User")"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30"/></a>
+		<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug"})"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30"/></a>
 	</div>
 	<div class="span2" style="margin-left: 0px;">
-		<a href="@Url.Action("User")">Username</a><br/>
+		<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug"})">Username</a><br/>
 		<small style="font-size: smaller;">35 points, 5 badges</small>
 	</div>
 </div>
 
 <div class="row">
 	<div class="span1" style="margin-top: 4px;">
-		<a href="@Url.Action("User")"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30"/></a>
+		<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug"})"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30"/></a>
 	</div>
 	<div class="span2" style="margin-left: 0px;">
-		<a href="@Url.Action("User")">Username</a><br/>
+		<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug"})">Username</a><br/>
 		<small style="font-size: smaller;">35 points, 5 badges</small>
 	</div>
 </div>
 
 <div class="row">
 	<div class="span1" style="margin-top: 4px;">
-		<a href="@Url.Action("User")"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30"/></a>
+		<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug"})"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30"/></a>
 	</div>
 	<div class="span2" style="margin-left: 0px;">
-		<a href="@Url.Action("User")">Username</a><br/>
+		<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug"})">Username</a><br/>
 		<small style="font-size: smaller;">35 points, 5 badges</small>
 	</div>
 </div>
 
 <div class="row">
 	<div class="span1" style="margin-top: 4px;">
-		<a href="@Url.Action("User")"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30"/></a>
+		<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug"})"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30"/></a>
 	</div>
 	<div class="span2" style="margin-left: 0px;">
-		<a href="@Url.Action("User")">Username</a><br/>
+		<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug"})">Username</a><br/>
 		<small style="font-size: smaller;">35 points, 5 badges</small>
 	</div>
 </div>
 <br/>
-<p><a href="@Url.Action("AllUsers")">View all users</a>.</p>
+<p><a href="@Url.RouteUrl("AllProfiles")">View all users</a>.</p>
