--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/UserProfileTabs.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/UserProfileTabs.cshtml
@@ -1,7 +1,7 @@
 ﻿<ul class="tabs">
-	<li class="active"><a href="@Url.Action("User")">Overview</a></li>
-	<li><a href="@Url.Action("UserRecentActivity")">Recent Activity</a></li>
-	<li><a href="@Url.Action("UserFavorites")">Favorites</a></li>
-	<li><a href="@Url.Action("UserBadges")">Badges</a></li>
-	<li><a href="@Url.Action("UserFriends")">Friends</a></li>
+	<li class="active"><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug"})">Overview</a></li>
+	<li><a href="@Url.RouteUrl("ProfileRecentActivity", new { profileSlug = "my-profile-slug" })">Recent Activity</a></li>
+	<li><a href="@Url.RouteUrl("ProfileFavorites", new { profileSlug = "my-profile-slug" })">Favorites</a></li>
+	<li><a href="@Url.RouteUrl("ProfileBadges", new { profileSlug = "my-profile-slug" })">Badges</a></li>
+	<li><a href="@Url.RouteUrl("ProfileFriends", new { profileSlug = "my-profile-slug" })">Friends</a></li>
 </ul>
