added controller and route for post; still need to fix breadcrumbs etc but for the most part the forum is fully ported to mvc, although a lot of work remains to be done

--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Post/Detail.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Post/Detail.cshtml
@@ -127,9 +127,9 @@
 
 			<div class="span6">
 				<ul class="pills" style="float: right;">
-					<li class="active"><a href="@Url.Action("Post")">Best</a></li>
-					<li><a href="@Url.Action("Post")">Oldest</a></li>
-					<li><a href="@Url.Action("Post")">Newest</a></li>
+					<li class="active"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">Best</a></li>
+					<li><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">Oldest</a></li>
+					<li><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">Newest</a></li>
 				</ul>
 			</div>
 
@@ -171,7 +171,7 @@
 			<div class="row">
 
 				<div class="span8 offset3">
-					<p style="font-size: smaller; text-align: right;"><a href="@Url.Action("Post")">Reply</a></p>
+					<p style="font-size: smaller; text-align: right;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">Reply</a></p>
 				</div>
 
 			</div>
@@ -211,7 +211,7 @@
 			<div class="row">
 
 				<div class="span8 offset4">
-					<p style="font-size: smaller;"><a href="@Url.Action("Post")">Reply</a></p>
+					<p style="font-size: smaller;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">Reply</a></p>
 				</div>
 
 			</div>
@@ -254,7 +254,7 @@
 			<div class="row">
 
 				<div class="span8 offset4">
-					<p style="font-size: smaller;"><a href="@Url.Action("Post")">Reply</a></p>
+					<p style="font-size: smaller;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">Reply</a></p>
 				</div>
 
 			</div>
@@ -294,7 +294,7 @@
 			<div class="row">
 
 				<div class="span8 offset4">
-					<p style="font-size: smaller;"><a href="@Url.Action("Post")">Reply</a></p>
+					<p style="font-size: smaller;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">Reply</a></p>
 				</div>
 
 			</div>
@@ -334,7 +334,7 @@
 			<div class="row">
 
 				<div class="span8 offset3">
-					<p style="font-size: smaller; text-align: right;"><a href="@Url.Action("Post")">Reply</a></p>
+					<p style="font-size: smaller; text-align: right;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">Reply</a></p>
 				</div>
 
 			</div>
@@ -374,7 +374,7 @@
 			<div class="row">
 
 				<div class="span8 offset3">
-					<p style="font-size: smaller; text-align: right;"><a href="@Url.Action("Post")">Reply</a></p>
+					<p style="font-size: smaller; text-align: right;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">Reply</a></p>
 				</div>
 
 			</div>
@@ -414,7 +414,7 @@
 			<div class="row">
 
 				<div class="span8 offset3">
-					<p style="font-size: smaller; text-align: right;"><a href="@Url.Action("Post")">Reply</a></p>
+					<p style="font-size: smaller; text-align: right;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">Reply</a></p>
 				</div>
 
 			</div>
@@ -454,7 +454,7 @@
 			<div class="row">
 
 				<div class="span8 offset3">
-					<p style="font-size: smaller; text-align: right;"><a href="@Url.Action("Post")">Reply</a></p>
+					<p style="font-size: smaller; text-align: right;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">Reply</a></p>
 				</div>
 
 			</div>
@@ -494,7 +494,7 @@
 			<div class="row">
 
 				<div class="span8 offset4">
-					<p style="font-size: smaller;"><a href="@Url.Action("Post")">Reply</a></p>
+					<p style="font-size: smaller;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">Reply</a></p>
 				</div>
 
 			</div>
@@ -534,7 +534,7 @@
 			<div class="row">
 
 				<div class="span8 offset3">
-					<p style="font-size: smaller; text-align: right;"><a href="@Url.Action("Post")">Reply</a></p>
+					<p style="font-size: smaller; text-align: right;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">Reply</a></p>
 				</div>
 
 			</div>
@@ -574,7 +574,7 @@
 			<div class="row">
 
 				<div class="span8 offset3">
-					<p style="font-size: smaller; text-align: right;"><a href="@Url.Action("Post")">Reply</a></p>
+					<p style="font-size: smaller; text-align: right;"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">Reply</a></p>
 				</div>
 
 			</div>
