--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/All.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/All.cshtml
@@ -16,21 +16,21 @@
 		<h2><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h2>
 		<p>A brief description of the tag.</p>
 		<dl>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
 					with 33 comments.</span></dd>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>Etiam porta sem malesuada magna mollis euismod.<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
 					with 33 comments.</span></dd>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 				dapibus posuere.
 				<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
 					with 33 comments.</span></dd>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante.
 				<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
@@ -43,21 +43,21 @@
 		<h2><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h2>
 		<p>A brief description of the tag.</p>
 		<dl>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
 					with 33 comments.</span></dd>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>Etiam porta sem malesuada magna mollis euismod.<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
 					with 33 comments.</span></dd>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 				dapibus posuere.
 				<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
 					with 33 comments.</span></dd>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante.
 				<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
@@ -70,21 +70,21 @@
 		<h2><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h2>
 		<p>A brief description of the tag.</p>
 		<dl>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
 					with 33 comments.</span></dd>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>Etiam porta sem malesuada magna mollis euismod.<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
 					with 33 comments.</span></dd>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 				dapibus posuere.
 				<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
 					with 33 comments.</span></dd>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante.
 				<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
@@ -103,11 +103,11 @@
 		<h3><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h3>
 		<p>A brief description of the tag.</p>
 		<dl>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>A severely truncated post body.<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
 					with 33 comments.</span></dd>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>Etiam porta sem malesuada magna mollis euismod.
 				<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
@@ -120,11 +120,11 @@
 		<h3><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h3>
 		<p style="font-size: smaller;">A brief description of the tag.</p>
 		<dl>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>A severely truncated post body.<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
 					with 33 comments.</span></dd>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>Etiam porta sem malesuada magna mollis euismod.
 				<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
@@ -137,11 +137,11 @@
 		<h3><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h3>
 		<p style="font-size: smaller;">A brief description of the tag.</p>
 		<dl>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>A severely truncated post body.<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
 					with 33 comments.</span></dd>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>Etiam porta sem malesuada magna mollis euismod.
 				<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
@@ -154,11 +154,11 @@
 		<h3><a href="@Url.RouteUrl("Tag", new { tagSlug = "tag" })">{Tag Name}</a></h3>
 		<p style="font-size: smaller;">A brief description of the tag.</p>
 		<dl>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>A severely truncated post body.<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
 					with 33 comments.</span></dd>
-			<dt><a href="@Url.Action("Post")">{Post title}</a></dt>
+			<dt><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post title}</a></dt>
 			<dd>Etiam porta sem malesuada magna mollis euismod.
 				<br />
 				<span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a>
