--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Category/Detail.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Category/Detail.cshtml
@@ -23,7 +23,7 @@
 			<img src="../../Themes/default/images/exclamation-white.png" /><br />
 		</div>
 
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
+		<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
 		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 			dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
 				font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
@@ -51,7 +51,7 @@
 			<img src="../../Themes/default/images/exclamation-white.png" /><br />
 		</div>
 
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
+		<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
 		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 			dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
 				font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
@@ -85,7 +85,7 @@
 			<img src="../../Themes/default/images/exclamation-white.png" /><br />
 		</div>
 
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
+		<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
 		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 			dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
 				font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
@@ -113,7 +113,7 @@
 			<img src="../../Themes/default/images/exclamation-white.png" /><br />
 		</div>
 
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
+		<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
 		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 			dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
 				font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
@@ -147,7 +147,7 @@
 			<img src="../../Themes/default/images/exclamation-white.png" /><br />
 		</div>
 
-		<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
+		<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
 		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
 				12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Example
@@ -175,7 +175,7 @@
 			<img src="../../Themes/default/images/exclamation-white.png" /><br />
 		</div>
 
-		<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
+		<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
 		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
 				12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Creative
@@ -203,7 +203,7 @@
 			<img src="../../Themes/default/images/exclamation-white.png" /><br />
 		</div>
 
-		<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
+		<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
 		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
 				12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Unmoderated
@@ -231,7 +231,7 @@
 			<img src="../../Themes/default/images/exclamation-white.png" /><br />
 		</div>
 
-		<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
+		<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
 		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
 				12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Category</a></p>
