--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/All.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/All.cshtml
@@ -12,111 +12,19 @@
 <div class="row">
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Example Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Creative Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Unmoderated Forum</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
 
 </div>
@@ -126,111 +34,19 @@
 <div class="row">
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Example Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Creative Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Unmoderated Forum</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
 
 </div>
@@ -240,116 +56,45 @@
 <div class="row">
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Example Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Creative Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Unmoderated Forum</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
 
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
 
 </div>
 
 <hr>
+
+<div class="row">
+
+	<div class="span4">
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
+	</div>
+
+	<div class="span4">
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
+	</div>
+
+	<div class="span4">
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
+	</div>
+
+	<div class="span4">
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
+	</div>
+
+</div>
+
 <ul class="pills">
 	<li class="active"><a href="@Url.Action("AllPosts")">Newest</a></li>
 	<li><a href="@Url.Action("AllPosts")">Oldest</a></li>
