--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Controversial.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/PostListing/Controversial.cshtml
@@ -8,303 +8,45 @@
 	<li><a href="@Url.RouteUrl("AllPosts")">All Posts</a></li>
 </ul>
 <!-- controversial posts -->
-
 <div class="row">
-
 	<div class="span8">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.Action("Post")">{Most Controversial Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
-				font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
-				Placeholder Category</span></a></p>
-
-		<div class="row">
-
-			<div class="span4">
-				<a class="btn" href="#">Add comment &raquo;</a></div>
-
-			<div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
-
 	<div class="span8">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
-				font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
-					Another Category</a></p>
-
-		<div class="row">
-
-			<div class="span4">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
-
 </div>
-
 <hr>
-
 <div class="row">
-
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Example
-					Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
-
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Creative
-					Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
-
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Unmoderated
-					Forum</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
-
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
-
 </div>
-
 <hr>
-
 <div class="row">
-
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Example
-					Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
-
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Creative
-					Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
-
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Unmoderated
-					Forum</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
-
 	<div class="span4">
-
-		<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-			float: right; clear: left;">
-			<img src="../../Themes/default/images/arrow-090.png" /><br />
-			<img src="../../Themes/default/images/arrow-270.png" /><br />
-			<img src="../../Themes/default/images/exclamation-white.png" /><br />
-		</div>
-
-		<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
-		<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-			dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
-				12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Category</a></p>
-
-		<div class="row">
-
-			<div class="span2">
-				<a class="btn small" href="#">Add comment &raquo;</a></div>
-
-			<div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;">
-				<img src="../../Themes/default/images/balloon-white.png" />
-				<a href="#">999 comments</a></div>
-
-		</div>
-
+		@RenderPage("~/Views/RoughDraft/partials/PostTile.cshtml")
 	</div>
-
 </div>
-
 <hr>
-
 <div class="pagination">
 	<ul>
 		<li class="prev disabled"><a href="#">&larr; Previous</a></li>
@@ -318,4 +60,3 @@
 		<li class="next"><a href="#">Next &rarr;</a></li>
 	</ul>
 </div>
-
