--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Favorites.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Favorites.cshtml
@@ -16,7 +16,7 @@
 	<div class="row" style="margin-top: 0px; margin-bottom: 0px;">
 
 		<div class="span10">
-			<p><strong><a href="@Url.Action("Post")">{Post Title}</a></strong> &ndash; This is
+			<p><strong><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></strong> &ndash; This is
 				a favorite post. Integer posuere erat a ante venenatis dapibus posuere. Etiam porta
 				sem malesuada magna mollis euismod. &mdash; <span style="text-align: right; font-size: smaller;">
 					<em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Category</a>
@@ -32,7 +32,7 @@
 	<div class="row" style="margin-top: 0px; margin-bottom: 0px;">
 
 		<div class="span10">
-			<p>Comment on post: <strong><a href="@Url.Action("Post")">{Post Title}</a></strong>
+			<p>Comment on post: <strong><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></strong>
 				&ndash; This is a favorite comment. Integer posuere erat a ante venenatis dapibus
 				posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
 					font-size: smaller;"><em>12:59 PM 12/31/2011</em> &middot; <a href="#">Remove</a></span></p>
