--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/RecentActivity.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/RecentActivity.cshtml
@@ -16,7 +16,7 @@
 	<div class="row">
 
 		<div class="span10">
-			<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
+			<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
 			<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 				dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
 					font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
@@ -47,7 +47,7 @@
 	<div class="row">
 
 		<div class="span10">
-			<p>Comment on post: <strong style="font-size: 18px"><a href="@Url.Action("Post")">
+			<p>Comment on post: <strong style="font-size: 18px"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">
 				{Post Title}</a></strong>. </p>
 			<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 				dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
