--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/Detail.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Tag/Detail.cshtml
@@ -23,7 +23,7 @@
 						<img src="../../Themes/default/images/exclamation-white.png" /><br />
 					</div>
 
-					<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
+					<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
 					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 						dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
 							font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
@@ -50,7 +50,7 @@
 						<img src="images/exclamation-white.png" /><br />
 					</div>
 
-					<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
+					<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
 					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 						dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
 							font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
@@ -83,7 +83,7 @@
 						<img src="../../Themes/default/images/exclamation-white.png" /><br />
 					</div>
 
-					<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
+					<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
 					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 						dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
 							font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
@@ -110,7 +110,7 @@
 						<img src="../../Themes/default/images/exclamation-white.png" /><br />
 					</div>
 
-					<h2><a href="@Url.Action("Post")">{Post Title}</a></h2>
+					<h2><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h2>
 					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 						dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
 							font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
@@ -143,7 +143,7 @@
 						<img src="../../Themes/default/images/exclamation-white.png" /><br />
 					</div>
 
-					<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
+					<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
 					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 						dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
 							12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Example Category</a></p>
@@ -169,7 +169,7 @@
 						<img src="../../Themes/default/images/exclamation-white.png" /><br />
 					</div>
 
-					<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
+					<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
 					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 						dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
 							12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Creative Category</a></p>
@@ -195,7 +195,7 @@
 						<img src="../../Themes/default/images/exclamation-white.png" /><br />
 					</div>
 
-					<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
+					<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
 					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 						dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
 							12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Unmoderated Forum</a></p>
@@ -221,7 +221,7 @@
 						<img src="../../Themes/default/images/exclamation-white.png" /><br />
 					</div>
 
-					<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
+					<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
 					<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 						dapibus posuere. &mdash; <span style="text-align: right; font-size: smaller;"><em>
 							12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Category</a></p>
